compiler/testData/diagnostics/tests/exposed/propertyInSimpleConstructor.kt
private enum class Foo { A, B }

class Bar(<!EXPOSED_PARAMETER_TYPE!>konst foo: Foo<!>)